# RIFT2026

./: .gitignore  REACT_SETUP_GUIDE.md  README.md  pyproject.toml  requirements.txt  sample.vcf
backend/: llm.py  main.py  rules.py  schema.py  vcf_parser.py
frontend/: COMPONENTS_OVERVIEW.md  README.md  README_BACKEND_SETUP.md  README_SETUP.md  dashboard.html  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: index.html
frontend/src/: App.jsx  index.css  index_modern_saas.css.bak
frontend/src/components/: DetailedReports.jsx  DownloadSection.jsx  DrugTable.jsx  ErrorBoundary.jsx  ErrorMessage.jsx  GenePanel.jsx  Header.jsx  HeroSection.jsx  HistoryModal.jsx  LoadingState.jsx  SummaryDashboard.jsx  UploadSection.jsx
frontend/src/components/backgrounds/: DNAHelix.jsx  GenomeScanAnimation.jsx  NucleotideParticles.jsx
frontend/src/components/ui/: AIGlowButton.jsx  GlassCard.jsx
frontend/src/utils/: historyManager.js
sample_data/: sample_patient.vcf
src/: __init__.py  main.py
src/api/routes/: __init__.py  analyze.py
src/core/: __init__.py  config.py
src/models/: __init__.py  schemas.py
src/services/: clinical_modifiers.py  evidence_scorer.py  interaction_checker.py  llm_client.py  phenotype_helper.py  rules_engine.py  vcf_parser.py
src/utils/: helpers.py
tests/: test_analyze.py  test_llm_client.py  test_rules_engine.py  test_vcf_parser.py
